--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "tauri": "tauri",
-    "test": "mocha tests/**/*.test.js"
+    "test": "mocha tests/**/*.test.js",
+    "cucumber":"cucumber-js"
   },
   "dependencies": {
     "@mantine/charts": "^7.5.2",
@@ -33,6 +34,7 @@
     "selenium-webdriver": "^4.17.0"
   },
   "devDependencies": {
+    "@cucumber/cucumber": "^10.3.1",
     "@tauri-apps/cli": "^1.5.8",
     "@testing-library/react": "^14.2.1",
     "@types/chai": "^4.3.11",
